# bqcheck

./: .gitignore  .ruff_fixes.txt  API-COMPATIBILITY.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  audit-report-2026-02-02.md  audit-report-2026-02-03-133012.md  audit-report-2026-02-03-133037.md  audit-report-2026-02-03-133116.md  audit-report-2026-02-03-133254.md  audit-report-2026-02-03-133400.md  audit-report-2026-02-03-133405.md  audit-report-2026-02-03-133410.md  audit-report-2026-02-03-133415.md  audit-report-2026-02-03-133442.md  audit-report-2026-02-03-133447.md  audit-report-2026-02-03-133452.md  audit-report-2026-02-03-133502.md  audit-report-2026-02-03-133507.md  audit-report-2026-02-03-133512.md  audit-report-2026-02-03-133517.md  audit-report-2026-02-03-133522.md  audit-report-2026-02-03-133652.md  audit-report-2026-02-03-133657.md  audit-report-2026-02-03-133702.md  audit-report-2026-02-03-133707.md  audit-report-2026-02-03-133712.md  audit-report-2026-02-03-133717.md  audit-report-2026-02-03-133722.md  audit-report-2026-02-03-133727.md  audit-report-2026-02-03-140825.md  audit-report-2026-02-03-190213.md  audit-report-2026-02-03-190830.md  audit-report-2026-02-03-191502.md  audit-report-2026-02-03-195332.md  audit-report-2026-02-03-204151.md  pyproject.toml
.github/workflows/: ci.yml
scripts/: check_ci.sh  install_git_hooks.sh
scripts/git-hooks/: pre-push
src/bqaudit/: __init__.py  anonymizer.py  cli.py  client.py  config.py  console.py  constants.py  error_handlers.py  license.py  queries.py  report.py  report_generator.py  scanner.py
src/bqaudit/api/: __init__.py  client.py  exceptions.py  models.py
src/bqaudit/license/: __init__.py  activate.py  models.py  storage.py
src/bqaudit/scan/: __init__.py  executor.py  models.py  simulator.py
src/bqaudit/scanner/: __init__.py  aggregator.py  anonymizer.py  bigquery_client.py  encryption.py  metadata_extractor.py  (+2 more)
src/bqcheck/: __init__.py  cli.py  config.py  console.py  constants.py  error_handlers.py  queries.py  report_generator.py
tests/: conftest.py  test_anonymizer.py  test_cli.py  test_client.py  test_config.py  test_license.py  test_report.py  test_scanner.py
tests/integration/: __init__.py  test_activation_flow.py  test_scan_command.py  test_token_depletion_flow.py  test_validate_scan_boundary.py
tests/unit/: test_aggregator.py  test_anonymizer.py  test_bigquery_client.py  test_cli_license_validate.py  test_cli_validate.py  test_cli_verbose.py  test_cli_version.py  test_config.py  test_console.py  test_custom_output_path.py  test_error_handlers.py  test_metadata_enrichment.py  test_metadata_extractor.py  test_queries.py  test_query_analyzer.py  test_report_generator.py
(+34 files in other folders)
