[project]
name = "bqaudit"
version = "0.1.0"
description = "BigQuery cost optimization audit tool"
authors = [
    {name = "Oxpure"}
]
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
keywords = ["bigquery", "gcp", "cost-optimization", "audit"]

dependencies = [
    "typer[all]>=0.12.0",
    "google-cloud-bigquery>=3.25.0",
    "requests>=2.31.0",
    "httpx>=0.24.0",
    "pyyaml>=6.0",
    "rich>=13.7.0",
    "pydantic>=2.0.0",
    "packaging>=21.0",
    "tenacity>=9.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.4.0",
    "mypy>=1.8.0"
]
# Note: UV also manages dev dependencies in [dependency-groups] below

[project.scripts]
bqaudit = "bqaudit.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/bqaudit"]

[tool.ruff]
line-length = 88
target-version = "py38"
exclude = [
    ".git",
    "__pycache__",
    ".pytest_cache",
    ".mypy_cache",
    ".ruff_cache",
    "dist",
    "build",
]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "F",    # Pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "W",    # pycodestyle warnings
]
ignore = []

[tool.ruff.lint.isort]
known-first-party = ["bqaudit"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = [
    "-v",                   # Verbose output
    "--strict-markers",     # Strict marker usage
    "--tb=short",           # Shorter traceback format
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "privacy_critical: marks tests as privacy-critical (anonymization, hashing, security)",
]

[tool.coverage.run]
source = ["src/bqaudit"]
omit = [
    "tests/*",
    "*/__init__.py",
]

[tool.coverage.report]
fail_under = 80  # Coverage threshold for quality assurance
precision = 2
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]

[tool.mypy]
python_version = "3.9"  # Match minimum supported version for backward compatibility
strict = true
disallow_untyped_defs = true
warn_return_any = true
warn_unused_configs = true
no_implicit_optional = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[dependency-groups]
dev = [
    "mypy>=1.14.1",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.4.0",
]
